--- a/app/src/main/res/layout/positions_cardview.xml
+++ b/app/src/main/res/layout/positions_cardview.xml
@@ -83,7 +83,7 @@
                     android:id="@+id/deactivateButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
                     app:srcCompat="@drawable/deactivate_icon" />
@@ -92,7 +92,7 @@
                     android:id="@+id/activateButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
                     app:srcCompat="@drawable/activate_icon" />
@@ -101,7 +101,7 @@
                     android:id="@+id/editButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toStartOf="@id/deactivateButton"
                     app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
@@ -125,6 +125,60 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/card_info_icon" />
+
+                <ImageView
+                    android:id="@+id/inHouseTeamIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView9"
+                    app:srcCompat="@drawable/inhouse_team_icon" />
+
+                <ImageView
+                    android:id="@+id/socialMediaIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/inHouseTeamIcon"
+                    app:layout_constraintTop_toTopOf="@+id/inHouseTeamIcon"
+                    app:srcCompat="@drawable/social_media_icon" />
+
+                <ImageView
+                    android:id="@+id/careerPageIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/socialMediaIcon"
+                    app:layout_constraintTop_toTopOf="@+id/socialMediaIcon"
+                    app:srcCompat="@drawable/career_page_icon" />
+
+                <ImageView
+                    android:id="@+id/referralIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/careerPageIcon"
+                    app:layout_constraintTop_toTopOf="@+id/careerPageIcon"
+                    app:srcCompat="@drawable/referral_icon" />
+
+                <ImageView
+                    android:id="@+id/internalJobPortalIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/referralIcon"
+                    app:layout_constraintTop_toTopOf="@+id/referralIcon"
+                    app:srcCompat="@drawable/list_icon" />
+
+                <ImageView
+                    android:id="@+id/externalConsultantIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toEndOf="@+id/internalJobPortalIcon"
+                    app:layout_constraintTop_toTopOf="@+id/internalJobPortalIcon"
+                    app:srcCompat="@drawable/external_consultant_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </RelativeLayout>
 
