--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#F8BA11</color>
     <color name="colorPrimaryDark">#C08A00</color>
-    <color name="colorAccent">#f8ba11</color>
+    <color name="colorAccent">#F8BA11</color>
 </resources>
