--- a/app/src/main/res/layout/activity_view_positions.xml
+++ b/app/src/main/res/layout/activity_view_positions.xml
@@ -20,6 +20,7 @@
         app:title="View Position" />
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayoutViewPositions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,25 +31,30 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/career_page_icon"
             android:text="Profiles" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/list_icon"
             android:text="To do's" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/inhouse_team_icon"
             android:text="Team" />
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:icon="@drawable/ic_menu_drive"
             android:text="Drives" />
     </com.google.android.material.tabs.TabLayout>
-    app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPAgerViewPositions"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayoutViewPositions" />
 </androidx.constraintlayout.widget.ConstraintLayout>
