profiles tabs set 2

--- a/app/src/main/res/layout/fragment_vppreferral.xml
+++ b/app/src/main/res/layout/fragment_vppreferral.xml
@@ -9,6 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:fontFamily="@font/roboto_bold"
+        android:layout_margin="8dp"
+        android:text="Referral"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
 </FrameLayout>
