--- a/app/src/main/res/layout/fragment_view_positions_profiles.xml
+++ b/app/src/main/res/layout/fragment_view_positions_profiles.xml
@@ -9,15 +9,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayoutViewPositionsProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-            android:id="@+id/tabLayoutViewPositionsProfile"
-            app:tabIconTint="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabIconTint="@color/colorPrimary"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPagerViewPositionsProfile"
