added search to profile

--- a/app/src/main/res/layout/fragment_positions.xml
+++ b/app/src/main/res/layout/fragment_positions.xml
@@ -29,10 +29,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext"
-            android:drawableStart="@drawable/search_icon"
+            android:drawableEnd="@drawable/search_icon"
             android:ems="10"
             android:hint="Search a position"
-            android:inputType="textPersonName"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
