--- a/app/src/main/res/layout/positions_cardview.xml
+++ b/app/src/main/res/layout/positions_cardview.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="16dp"
         android:layout_margin="5dp">
 
         <RelativeLayout
